# AstralEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  CompileProject.bat  Doxyfile  GenerateVisualStudioProject.bat  GenerateXcodeProject.sh  PLANNING.md  README.md  Setup.bat  Setup.sh  all_tests[1]_include.cmake  cmake_install.cmake  main.cpp
Astral-Editor/: CMakeLists.txt  ChessEntities.cpp  ChessEntities.h  Editor.cpp  Editor.h  EditorModule.cpp  MenuBar.cpp  MenuBar.h  SceneGraphPanel.cpp  SceneGraphPanel.h  ViewportPanel.cpp  ViewportPanel.h  imgui-editor-config.ini
Astral-Editor/Components/: CameraController.cpp  CameraController.h  ExternalSceneBreakdownConfigComponent.cpp  ExternalSceneBreakdownConfigComponent.h  MenuBarComponent.cpp  MenuBarComponent.h
Astral-Editor/Panels/: EnvironmentPanel.cpp  EnvironmentPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Astral-Editor/Utilities/: AssetFileHelpers.cpp  AssetFileHelpers.h
Astral-Runtime/: CMakeLists.txt  main.cpp  pch.h
Astral-Runtime/Asset/: Asset.cpp  Asset.h  AssetErrorCodes.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  AssetRegistryStats.h  AssetRegistry_Impl.h  Ref.h
Astral-Runtime/Core/: ApplicationModule.h  CoreMacroDefinitions.h  Engine.cpp  Engine.h  EngineLoopEvents.h  FixedIntegerTypes.h  SmartPointers.h  SystemManager.h
Astral-Runtime/Debug/: EngineDebugInfoLogger.cpp  EngineDebugInfoLogger.h
Astral-Runtime/ECS/: ComponentPool.h  ComponentPoolSet.h  ComponentPoolSet_Impl.h  ComponentViewIterator.cpp  ComponentViewIterator.h  ECS.cpp  ECS.h  ECSErrorHandling.h  ECSManager.cpp  ECSManager.h  ECS_Impl.h  Entity.cpp  Entity.h  Entity_Impl.h  SceneManager.cpp  SceneManager.h
Astral-Runtime/Input/: InputManager.h  InputState.cpp  InputState.h  KeycodeConversions.cpp  Keycodes.h
Astral-Runtime/Job/: JobManager.cpp  JobManager.h  JobQueue.cpp  JobQueue.h  ThreadPool.cpp  ThreadPool.h  ThreadPool_Impl.h
Astral-Runtime/Renderer/: DeferredRenderer.cpp  DeferredRenderer.h  DrawList.cpp  DrawList.h  ForwardRenderer.cpp  ForwardRenderer.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererCommands.cpp  RendererCommands.h  RendererContext.cpp  RendererContext.h  RendererManager.cpp  RendererManager.h  SceneRenderer.cpp  SceneRenderer.h  SceneRendererImpl.cpp  SceneRendererImpl.h  SubmissionList.cpp  SubmissionList.h
Astral-Runtime/Scenes/: Scene.h  SceneManager.cpp  SceneManager.h
Astral-Runtime/Window/: Window.cpp  Window.h  WindowEvents.h  WindowManager.cpp  WindowManager.h
Chess/: CMakeLists.txt
Chess/Source/: CMakeLists.txt  ChessModule.cpp  ChessMove.h  ChessPieceTypes.cpp  ChessPieceTypes.h  Conversions.cpp  Conversions.h  EntityManager.cpp  EntityManager.h  EntryPoint.cpp  GameManager.cpp  GameManager.h  MoveList.cpp  MoveList.h  RenderStuff.cpp  RenderStuff.h  start.cpp
Chess/Tests/: CMakeLists.txt
Samples/Chess/: CMakeLists.txt  ChessEntities.cpp  ChessEntities.h  ChessModule.cpp  ChessModule.h  GameManager.cpp  GameManager.h  imgui-config.ini
Source/: CMakeLists.txt  CoreMacroDefinitions.h  main.cpp  pch.cpp  pch.h
Source/AstralEngine/: Astral.h  CMakeLists.txt  main.cpp  pch.h
Source/Board/: Board.cpp  Board.h
Source/Chess/: CMakeLists.txt  ChessEntities.cpp  ChessEntities.h  ChessModule.cpp  ChessMove.h  GameManager.cpp  GameManager.h
Source/Core/: CoreMacroDefinitions.h  Engine.cpp  Engine.h  SystemEvents.h  SystemManager.cpp  SystemManager.h
Source/Debug/: AllocationTracker.h  ConsoleLogFile.h  DebugMacros.cpp  DebugMacros.h  DebugManager.cpp  DebugManager.h  EngineDebugInfoLogger.cpp  LogFile.cpp  LogFile.h  LogUsedTools.cpp  ProfilerLogFile.cpp
Source/ECS/: ECS.cpp  ECS.h  ECSManager.cpp  ECSManager.h  Entity.cpp  Entity.h
Source/Game/: Board.cpp  Board.h  BoardManager.cpp  BoardManager.h  Conversions.cpp  Conversions.h  GameManager.h  MoveGeneration.cpp  MoveGeneration.h  MoveGenerationHelpers.cpp  MoveGenerationHelpers.h  MoveList.cpp  MoveList.h  PieceInfo.cpp  PieceInfo.h
Source/IO/: IOManager.cpp  IOManager.h  PrintBoardEvent.h
Source/IOManager/: IOManager.cpp  IOManager.h
Source/InputManager/: InputManager.cpp  InputManager.h
Source/Renderer/: Renderer.cpp  Renderer.h  RendererCommands.cpp  RendererCommands.h  RendererContext.cpp  RendererContext.h  RendererManager.cpp  RendererManager.h  Texture.cpp
Source/Window/: Window.cpp  Window.h  WindowEvents.h  WindowManager.cpp  WindowManager.h
Source/WindowManager/: WindowEvents.h  WindowManager.cpp  WindowManager.h
SozinEngine/: CMakeLists.txt
SozinEngine/Source/: Sozin.h  pch.h
SozinEngine/Tests/: CMakeLists.txt
Tests/: CMakeLists.txt  ExampleTest.cpp
Tests/Astral-Runtime/: CMakeLists.txt  ExampleTest.cpp  main.cpp
Tests/AstralEngine/: CMakeLists.txt
Tests/Chess/: CMakeLists.txt
Tests/Game/: BoardTest.cpp  MoveGenerationTest.cpp  MoveGenerationTest_Pawn.cpp  MoveGenerationTest_Rook.cpp  PieceTest.cpp
Tests/SozinEngine/: CMakeLists.txt
ThirdPartyLibraries/: CMakeLists.txt
ThirdPartyLibraries/GLAD/: glad.c
ThirdPartyLibraries/GLFW/: CMakeLists.txt
ThirdPartyLibraries/ImGui/: CMakeLists.txt  imgui_internal.h  imgui_tables.cpp
ThirdPartyLibraries/ImGuiFileDialog/: CMakeLists.txt
ThirdPartyLibraries/ImGuizmo/: CMakeLists.txt
ThirdPartyLibraries/ImPlot/: CMakeLists.txt
ThirdPartyLibraries/cpptrace/: CMakeLists.txt  README.md
ThirdPartyLibraries/cpuinfo/: CMakeLists.txt
ThirdPartyLibraries/gli/: CMakeLists.txt
ThirdPartyLibraries/glm/: readme.md
ThirdPartyLibraries/glslang/: .gitignore
ThirdPartyLibraries/imgui/: imconfig.h
ThirdPartyLibraries/msgpack/: CMakeLists.txt  Files.cmake  README.md
ThirdPartyLibraries/stb_image/: CMakeLists.txt  stb_image.cpp  stb_image_write.cpp
ThirdPartyLibraries/std_image/: CMakeLists.txt  std_image.cpp
ThirdPartyLibraries/yaml-cpp/: CMakeLists.txt
source/Ayla/: CMakeLists.txt  aypch.h
(+4976 files in other folders)
